force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/fields/clofor_com_cfs__Active__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>default is unchecked. once approved, it is automatically checked by Field Update.</description>
    <inlineHelpText>After creating Tax ratio management record, press &apos;Submit for Approval&apos; button. After the review and approval by accounting team, it will be automatically activated.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>