force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/fields/clofor_com_cfs__Selling_Tax_Ratio__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Selling_Tax_Ratio__c</fullName>
    <label>Selling Tax Ratio (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>