force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/fields/clofor_com_cfs__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>