force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/fields/clofor_com_cfs__TAX_RATIO_ID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TAX_RATIO_ID__c</fullName>
    <displayFormat>TAX-{000}</displayFormat>
    <label>TAX RATIO ID</label>
    <type>AutoNumber</type>
</CustomField>