force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/validationRules/clofor_com_cfs__Country_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Country_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT(clofor_com_cfs__Currency__c) )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Currency__c</errorDisplayField>
    <errorMessage>Currency is empty. Please select currency.</errorMessage>
</ValidationRule>