force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/validationRules/clofor_com_cfs__End_Date_Must_Be_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__End_Date_Must_Be_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__End_Date__c &lt;  clofor_com_cfs__Start_Date__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after Start Date</errorMessage>
</ValidationRule>