force-app/main/default/objects/clofor_com_cfs__Tax_Ratio__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__TAX_RATIO_ID__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Currency__c</columns>
    <columns>clofor_com_cfs__Selling_Tax_Ratio__c</columns>
    <columns>clofor_com_cfs__Buying_Tax_Ratio__c</columns>
    <columns>clofor_com_cfs__Start_Date__c</columns>
    <columns>clofor_com_cfs__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>